fixed spacing on login and signup page

--- a/client/src/Pages/Login/Login.scss
+++ b/client/src/Pages/Login/Login.scss
@@ -2,7 +2,7 @@
 @import "../../styles/responsive.scss";
 
 .login-page-container {
-  height: calc(100vh - 2rem);
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
