--- a/client/src/Pages/SignUp/SignUp.scss
+++ b/client/src/Pages/SignUp/SignUp.scss
@@ -2,6 +2,7 @@
 @import "../../styles/responsive.scss";
 
 .signup-page-container {
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
